# PriceData

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: .buildinfo  conf.py  examples.html  examples.rst  genindex.html  index.rst  modules.html  modules.rst  objects.inv  pricedata.core.html  pricedata.core.rst  pricedata.html  pricedata.io.html  pricedata.io.rst  pricedata.rst  pricedata.transforms.html  pricedata.utils.dev_types.html  pricedata.utils.dev_types.rst  pricedata.utils.dev_types.spec.html  pricedata.utils.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/: index.html
docs/_modules/: index.html
docs/_modules/pricedata/core/: dataset.html
docs/_modules/pricedata/io/: loader.html
docs/_modules/pricedata/transforms/: candles.html  features.html
docs/_modules/pricedata/utils/dev_types/: dev_types.html
docs/_modules/pricedata/utils/dev_types/spec/: spec.html
docs/_sources/: examples.rst.txt  index.rst.txt  pricedata.transforms.rst.txt  pricedata.utils.dev_types.spec.rst.txt  pricedata.utils.rst.txt
examples/: 00_basic_usage.py  01_downloading_data.py  02_changing_candle_kind.py
pricedata/core/: __init__.py  dataset.py
pricedata/io/: loader.py
pricedata/transforms/: candles.py  features.py
pricedata/utils/: __init__.py
pricedata/utils/dev_types/: dev_types.py
pricedata/utils/dev_types/spec/: spec.py
pricedata/utils/pandas/: pandas_init.py
