[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PriceData"
version = "0.1.0"
description = "A useful package for handling price data."
authors = [
    { name="SolPaw321" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
